# lpcfmt

./: .gitignore  CLAUDE.md  CMakeLists.txt  GRAMMAR_COMPARISON.md  GRAMMAR_UPDATES.md  Makefile  PROJECT_COMPLETE.md  README.md  TESTING.md  TEST_RESULTS.md  build.gradle  go.mod  literal.g4  lpc.g4  lpcid.g4  main.cpp  settings.gradle
.claude/: settings.local.json
.github/: dependabot.yml
cmake/: FindANTLR.cmake
cmd/lpcfmt/: main.go
grammar_analysis/: README.md
internal/ast/: .gitignore  ast.go  builder.go  formatter.go
internal/formatter/: antlr_formatter.go  formatter.go  formatter_test.go  idempotency_test.go  integration_test.go
scripts/: download_tests.sh
tests/: 1.lpc  NEW_TESTS_README.md  NEW_TESTS_SUMMARY.md  README.md  grammar_features.lpc
tests/lpc-test/: combat.c.formatted  living.c.formatted  maze.c.formatted  room.c.formatted  user1.c.formatted
tests/mudlibs/: README.md
tests/nt7/: char.c.formatted  equip.c.formatted  feature_skill.c.formatted  room.c.formatted  weapon.c.formatted
tests/xkx100/: char.c.formatted  room.c.formatted
